Projeto1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     global_declaration -> function_definition
Rule 5     global_declaration -> declaration
Rule 6     function_definition -> type_specifier declarator declaration_list_opt compound_statement
Rule 7     function_definition -> declarator declaration_list_opt compound_statement
Rule 8     type_specifier -> VOID
Rule 9     type_specifier -> CHAR
Rule 10    type_specifier -> INT
Rule 11    type_specifier -> FLOAT
Rule 12    declaration_list_opt -> declaration_list
Rule 13    declaration_list_opt -> empty
Rule 14    declaration_list -> declaration
Rule 15    declaration_list -> declaration_list declaration
Rule 16    declarator -> direct_declarator
Rule 17    declarator -> pointer direct_declarator
Rule 18    pointer -> TIMES
Rule 19    pointer -> TIMES pointer
Rule 20    direct_declarator -> identifier
Rule 21    direct_declarator -> LPAREN declarator RPAREN
Rule 22    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 23    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 24    direct_declarator -> direct_declarator LPAREN identifier_list_opt RPAREN
Rule 25    identifier -> ID
Rule 26    identifier_list_opt -> identifier_list
Rule 27    identifier_list_opt -> empty
Rule 28    identifier_list -> identifier
Rule 29    identifier_list -> identifier_list COMMA identifier
Rule 30    constant_expression_opt -> constant_expression
Rule 31    constant_expression_opt -> empty
Rule 32    constant_expression -> binary_expression
Rule 33    binary_expression -> cast_expression
Rule 34    binary_expression -> binary_expression TIMES binary_expression
Rule 35    binary_expression -> binary_expression DIVIDE binary_expression
Rule 36    binary_expression -> binary_expression MOD binary_expression
Rule 37    binary_expression -> binary_expression PLUS binary_expression
Rule 38    binary_expression -> binary_expression MINUS binary_expression
Rule 39    binary_expression -> binary_expression LESSTHAN binary_expression
Rule 40    binary_expression -> binary_expression LESSTHANEQ binary_expression
Rule 41    binary_expression -> binary_expression GREATERTHANEQ binary_expression
Rule 42    binary_expression -> binary_expression GREATERTHAN binary_expression
Rule 43    binary_expression -> binary_expression EQ binary_expression
Rule 44    binary_expression -> binary_expression NOTEQ binary_expression
Rule 45    binary_expression -> binary_expression AND binary_expression
Rule 46    binary_expression -> binary_expression OR binary_expression
Rule 47    cast_expression -> unary_expression
Rule 48    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 49    unary_expression -> postfix_expression
Rule 50    unary_expression -> PLUSPLUS unary_expression
Rule 51    unary_expression -> MINUSMINUS unary_expression
Rule 52    unary_expression -> unary_operator cast_expression
Rule 53    postfix_expression -> primary_expression
Rule 54    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 55    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 56    postfix_expression -> postfix_expression LPAREN argument_expression RPAREN
Rule 57    postfix_expression -> postfix_expression PLUSPLUS
Rule 58    postfix_expression -> postfix_expression MINUSMINUS
Rule 59    primary_expression -> identifier
Rule 60    primary_expression -> constant
Rule 61    primary_expression -> LPAREN expression RPAREN
Rule 62    constant -> INT_CONST
Rule 63    constant -> CHAR_CONST
Rule 64    constant -> FLOAT_CONST
Rule 65    constant -> STRING
Rule 66    expression -> assignment_expression
Rule 67    expression -> expression COMMA assignment_expression
Rule 68    argument_expression -> assignment_expression
Rule 69    argument_expression -> argument_expression COMMA assignment_expression
Rule 70    assignment_expression -> binary_expression
Rule 71    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 72    assignment_operator -> EQUALS
Rule 73    assignment_operator -> TIMESEQ
Rule 74    assignment_operator -> DIVEQ
Rule 75    assignment_operator -> MODEQ
Rule 76    assignment_operator -> PLUSEQ
Rule 77    assignment_operator -> MINUSEQ
Rule 78    unary_operator -> AND
Rule 79    unary_operator -> TIMES
Rule 80    unary_operator -> PLUS
Rule 81    unary_operator -> MINUS
Rule 82    unary_operator -> NOT
Rule 83    unary_operator -> ADDRESS
Rule 84    parameter_list -> parameter_declaration
Rule 85    parameter_list -> parameter_list COMMA parameter_declaration
Rule 86    parameter_declaration -> type_specifier declarator
Rule 87    declaration -> decl_body SEMI
Rule 88    decl_body -> type_specifier init_declarator_list_opt
Rule 89    init_declarator_list_opt -> init_declarator_list
Rule 90    init_declarator_list_opt -> empty
Rule 91    init_declarator_list -> init_declarator
Rule 92    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 93    init_declarator -> declarator
Rule 94    init_declarator -> declarator EQUALS initializer
Rule 95    initializer -> assignment_expression
Rule 96    initializer -> LBRACE initializer_list RBRACE
Rule 97    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 98    initializer_list -> initializer
Rule 99    initializer_list -> initializer_list COMMA initializer
Rule 100   compound_statement -> LBRACE block_item_list_opt RBRACE
Rule 101   block_item_list_opt -> block_item_list
Rule 102   block_item_list_opt -> empty
Rule 103   block_item_list -> block_item
Rule 104   block_item_list -> block_item_list block_item
Rule 105   block_item -> declaration
Rule 106   block_item -> statement
Rule 107   statement -> expression_statement
Rule 108   statement -> compound_statement
Rule 109   statement -> selection_statement
Rule 110   statement -> interation_statement
Rule 111   statement -> jump_statement
Rule 112   statement -> assert_statement
Rule 113   statement -> print_statement
Rule 114   statement -> read_statement
Rule 115   expression_statement -> expression_opt SEMI
Rule 116   expression_opt -> expression
Rule 117   expression_opt -> empty
Rule 118   selection_statement -> IF LPAREN expression RPAREN statement
Rule 119   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 120   interation_statement -> WHILE LPAREN expression RPAREN statement
Rule 121   interation_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 122   interation_statement -> FOR LPAREN declaration expression_opt SEMI expression_opt RPAREN statement
Rule 123   jump_statement -> BREAK SEMI
Rule 124   jump_statement -> RETURN expression_opt SEMI
Rule 125   assert_statement -> ASSERT expression SEMI
Rule 126   print_statement -> PRINT LPAREN expression_opt RPAREN SEMI
Rule 127   read_statement -> READ LPAREN argument_expression RPAREN SEMI
Rule 128   empty -> <empty>

Terminals, with rules where they appear

ADDRESS              : 83
AND                  : 45 78
ASSERT               : 125
BREAK                : 123
CHAR                 : 9
CHAR_CONST           : 63
COMMA                : 29 67 69 85 92 97 99
DIVEQ                : 74
DIVIDE               : 35
ELSE                 : 119
EQ                   : 43
EQUALS               : 72 94
FLOAT                : 11
FLOAT_CONST          : 64
FOR                  : 121 122
GREATERTHAN          : 42
GREATERTHANEQ        : 41
ID                   : 25
IF                   : 118 119
INT                  : 10
INT_CONST            : 62
LBRACE               : 96 97 100
LBRACKET             : 22 54
LESSTHAN             : 39
LESSTHANEQ           : 40
LPAREN               : 21 23 24 48 55 56 61 118 119 120 121 122 126 127
MINUS                : 38 81
MINUSEQ              : 77
MINUSMINUS           : 51 58
MOD                  : 36
MODEQ                : 75
NOT                  : 82
NOTEQ                : 44
OR                   : 46
PLUS                 : 37 80
PLUSEQ               : 76
PLUSPLUS             : 50 57
PRINT                : 126
RBRACE               : 96 97 100
RBRACKET             : 22 54
READ                 : 127
RETURN               : 124
RPAREN               : 21 23 24 48 55 56 61 118 119 120 121 122 126 127
SEMI                 : 87 115 121 121 122 123 124 125 126 127
STRING               : 65
TIMES                : 18 19 34 79
TIMESEQ              : 73
VOID                 : 8
WHILE                : 120
error                : 

Nonterminals, with rules where they appear

argument_expression  : 56 69 127
assert_statement     : 112
assignment_expression : 66 67 68 69 71 95
assignment_operator  : 71
binary_expression    : 32 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 70
block_item           : 103 104
block_item_list      : 101 104
block_item_list_opt  : 100
cast_expression      : 33 48 52
compound_statement   : 6 7 108
constant             : 60
constant_expression  : 30
constant_expression_opt : 22
decl_body            : 87
declaration          : 5 14 15 105 122
declaration_list     : 12 15
declaration_list_opt : 6 7
declarator           : 6 7 21 86 93 94
direct_declarator    : 16 17 22 23 24
empty                : 13 27 31 90 102 117
expression           : 54 61 67 116 118 119 120 125
expression_opt       : 115 121 121 121 122 122 124 126
expression_statement : 107
function_definition  : 4
global_declaration   : 2 3
global_declaration_list : 1 3
identifier           : 20 28 29 59
identifier_list      : 26 29
identifier_list_opt  : 24
init_declarator      : 91 92
init_declarator_list : 89 92
init_declarator_list_opt : 88
initializer          : 94 98 99
initializer_list     : 96 97 99
interation_statement : 110
jump_statement       : 111
parameter_declaration : 84 85
parameter_list       : 23 85
pointer              : 17 19
postfix_expression   : 49 54 55 56 57 58
primary_expression   : 53
print_statement      : 113
program              : 0
read_statement       : 114
selection_statement  : 109
statement            : 106 118 119 119 120 121 122
type_specifier       : 6 48 86 88
unary_expression     : 47 50 51 71
unary_operator       : 52

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (4) global_declaration -> . function_definition
    (5) global_declaration -> . declaration
    (6) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (7) function_definition -> . declarator declaration_list_opt compound_statement
    (87) declaration -> . decl_body SEMI
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT
    (16) declarator -> . direct_declarator
    (17) declarator -> . pointer direct_declarator
    (88) decl_body -> . type_specifier init_declarator_list_opt
    (20) direct_declarator -> . identifier
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (18) pointer -> . TIMES
    (19) pointer -> . TIMES pointer
    (25) identifier -> . ID

    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    declarator                     shift and go to state 7
    decl_body                      shift and go to state 8
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    identifier                     shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (4) global_declaration -> . function_definition
    (5) global_declaration -> . declaration
    (6) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (7) function_definition -> . declarator declaration_list_opt compound_statement
    (87) declaration -> . decl_body SEMI
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT
    (16) declarator -> . direct_declarator
    (17) declarator -> . pointer direct_declarator
    (88) decl_body -> . type_specifier init_declarator_list_opt
    (20) direct_declarator -> . identifier
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (18) pointer -> . TIMES
    (19) pointer -> . TIMES pointer
    (25) identifier -> . ID

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    global_declaration             shift and go to state 19
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    declarator                     shift and go to state 7
    decl_body                      shift and go to state 8
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    identifier                     shift and go to state 15

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 2 (global_declaration_list -> global_declaration .)
    LPAREN          reduce using rule 2 (global_declaration_list -> global_declaration .)
    TIMES           reduce using rule 2 (global_declaration_list -> global_declaration .)
    ID              reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (4) global_declaration -> function_definition .

    VOID            reduce using rule 4 (global_declaration -> function_definition .)
    CHAR            reduce using rule 4 (global_declaration -> function_definition .)
    INT             reduce using rule 4 (global_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (global_declaration -> function_definition .)
    LPAREN          reduce using rule 4 (global_declaration -> function_definition .)
    TIMES           reduce using rule 4 (global_declaration -> function_definition .)
    ID              reduce using rule 4 (global_declaration -> function_definition .)
    $end            reduce using rule 4 (global_declaration -> function_definition .)


state 5

    (5) global_declaration -> declaration .

    VOID            reduce using rule 5 (global_declaration -> declaration .)
    CHAR            reduce using rule 5 (global_declaration -> declaration .)
    INT             reduce using rule 5 (global_declaration -> declaration .)
    FLOAT           reduce using rule 5 (global_declaration -> declaration .)
    LPAREN          reduce using rule 5 (global_declaration -> declaration .)
    TIMES           reduce using rule 5 (global_declaration -> declaration .)
    ID              reduce using rule 5 (global_declaration -> declaration .)
    $end            reduce using rule 5 (global_declaration -> declaration .)


state 6

    (6) function_definition -> type_specifier . declarator declaration_list_opt compound_statement
    (88) decl_body -> type_specifier . init_declarator_list_opt
    (16) declarator -> . direct_declarator
    (17) declarator -> . pointer direct_declarator
    (89) init_declarator_list_opt -> . init_declarator_list
    (90) init_declarator_list_opt -> . empty
    (20) direct_declarator -> . identifier
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (18) pointer -> . TIMES
    (19) pointer -> . TIMES pointer
    (91) init_declarator_list -> . init_declarator
    (92) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (128) empty -> .
    (25) identifier -> . ID
    (93) init_declarator -> . declarator
    (94) init_declarator -> . declarator EQUALS initializer

    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    SEMI            reduce using rule 128 (empty -> .)
    ID              shift and go to state 18

    declarator                     shift and go to state 20
    init_declarator_list_opt       shift and go to state 21
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    init_declarator_list           shift and go to state 22
    empty                          shift and go to state 23
    identifier                     shift and go to state 15
    init_declarator                shift and go to state 24

state 7

    (7) function_definition -> declarator . declaration_list_opt compound_statement
    (12) declaration_list_opt -> . declaration_list
    (13) declaration_list_opt -> . empty
    (14) declaration_list -> . declaration
    (15) declaration_list -> . declaration_list declaration
    (128) empty -> .
    (87) declaration -> . decl_body SEMI
    (88) decl_body -> . type_specifier init_declarator_list_opt
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    LBRACE          reduce using rule 128 (empty -> .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    declaration_list_opt           shift and go to state 25
    declaration_list               shift and go to state 26
    empty                          shift and go to state 27
    declaration                    shift and go to state 28
    decl_body                      shift and go to state 8
    type_specifier                 shift and go to state 29

state 8

    (87) declaration -> decl_body . SEMI

    SEMI            shift and go to state 30


state 9

    (8) type_specifier -> VOID .

    LPAREN          reduce using rule 8 (type_specifier -> VOID .)
    TIMES           reduce using rule 8 (type_specifier -> VOID .)
    ID              reduce using rule 8 (type_specifier -> VOID .)
    SEMI            reduce using rule 8 (type_specifier -> VOID .)
    RPAREN          reduce using rule 8 (type_specifier -> VOID .)


state 10

    (9) type_specifier -> CHAR .

    LPAREN          reduce using rule 9 (type_specifier -> CHAR .)
    TIMES           reduce using rule 9 (type_specifier -> CHAR .)
    ID              reduce using rule 9 (type_specifier -> CHAR .)
    SEMI            reduce using rule 9 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 9 (type_specifier -> CHAR .)


state 11

    (10) type_specifier -> INT .

    LPAREN          reduce using rule 10 (type_specifier -> INT .)
    TIMES           reduce using rule 10 (type_specifier -> INT .)
    ID              reduce using rule 10 (type_specifier -> INT .)
    SEMI            reduce using rule 10 (type_specifier -> INT .)
    RPAREN          reduce using rule 10 (type_specifier -> INT .)


state 12

    (11) type_specifier -> FLOAT .

    LPAREN          reduce using rule 11 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 11 (type_specifier -> FLOAT .)
    ID              reduce using rule 11 (type_specifier -> FLOAT .)
    SEMI            reduce using rule 11 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 11 (type_specifier -> FLOAT .)


state 13

    (16) declarator -> direct_declarator .
    (22) direct_declarator -> direct_declarator . LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (24) direct_declarator -> direct_declarator . LPAREN identifier_list_opt RPAREN

    VOID            reduce using rule 16 (declarator -> direct_declarator .)
    CHAR            reduce using rule 16 (declarator -> direct_declarator .)
    INT             reduce using rule 16 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 16 (declarator -> direct_declarator .)
    LBRACE          reduce using rule 16 (declarator -> direct_declarator .)
    EQUALS          reduce using rule 16 (declarator -> direct_declarator .)
    COMMA           reduce using rule 16 (declarator -> direct_declarator .)
    SEMI            reduce using rule 16 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 16 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 31
    LPAREN          shift and go to state 32


state 14

    (17) declarator -> pointer . direct_declarator
    (20) direct_declarator -> . identifier
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (25) identifier -> . ID

    LPAREN          shift and go to state 16
    ID              shift and go to state 18

    direct_declarator              shift and go to state 33
    identifier                     shift and go to state 15

state 15

    (20) direct_declarator -> identifier .

    LBRACKET        reduce using rule 20 (direct_declarator -> identifier .)
    LPAREN          reduce using rule 20 (direct_declarator -> identifier .)
    VOID            reduce using rule 20 (direct_declarator -> identifier .)
    CHAR            reduce using rule 20 (direct_declarator -> identifier .)
    INT             reduce using rule 20 (direct_declarator -> identifier .)
    FLOAT           reduce using rule 20 (direct_declarator -> identifier .)
    LBRACE          reduce using rule 20 (direct_declarator -> identifier .)
    EQUALS          reduce using rule 20 (direct_declarator -> identifier .)
    COMMA           reduce using rule 20 (direct_declarator -> identifier .)
    SEMI            reduce using rule 20 (direct_declarator -> identifier .)
    RPAREN          reduce using rule 20 (direct_declarator -> identifier .)


state 16

    (21) direct_declarator -> LPAREN . declarator RPAREN
    (16) declarator -> . direct_declarator
    (17) declarator -> . pointer direct_declarator
    (20) direct_declarator -> . identifier
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (18) pointer -> . TIMES
    (19) pointer -> . TIMES pointer
    (25) identifier -> . ID

    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    declarator                     shift and go to state 34
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    identifier                     shift and go to state 15

state 17

    (18) pointer -> TIMES .
    (19) pointer -> TIMES . pointer
    (18) pointer -> . TIMES
    (19) pointer -> . TIMES pointer

    LPAREN          reduce using rule 18 (pointer -> TIMES .)
    ID              reduce using rule 18 (pointer -> TIMES .)
    TIMES           shift and go to state 17

    pointer                        shift and go to state 35

state 18

    (25) identifier -> ID .

    LBRACKET        reduce using rule 25 (identifier -> ID .)
    LPAREN          reduce using rule 25 (identifier -> ID .)
    VOID            reduce using rule 25 (identifier -> ID .)
    CHAR            reduce using rule 25 (identifier -> ID .)
    INT             reduce using rule 25 (identifier -> ID .)
    FLOAT           reduce using rule 25 (identifier -> ID .)
    LBRACE          reduce using rule 25 (identifier -> ID .)
    EQUALS          reduce using rule 25 (identifier -> ID .)
    COMMA           reduce using rule 25 (identifier -> ID .)
    SEMI            reduce using rule 25 (identifier -> ID .)
    RPAREN          reduce using rule 25 (identifier -> ID .)
    PLUSPLUS        reduce using rule 25 (identifier -> ID .)
    MINUSMINUS      reduce using rule 25 (identifier -> ID .)
    TIMES           reduce using rule 25 (identifier -> ID .)
    DIVIDE          reduce using rule 25 (identifier -> ID .)
    MOD             reduce using rule 25 (identifier -> ID .)
    PLUS            reduce using rule 25 (identifier -> ID .)
    MINUS           reduce using rule 25 (identifier -> ID .)
    LESSTHAN        reduce using rule 25 (identifier -> ID .)
    LESSTHANEQ      reduce using rule 25 (identifier -> ID .)
    GREATERTHANEQ   reduce using rule 25 (identifier -> ID .)
    GREATERTHAN     reduce using rule 25 (identifier -> ID .)
    EQ              reduce using rule 25 (identifier -> ID .)
    NOTEQ           reduce using rule 25 (identifier -> ID .)
    AND             reduce using rule 25 (identifier -> ID .)
    OR              reduce using rule 25 (identifier -> ID .)
    RBRACKET        reduce using rule 25 (identifier -> ID .)
    TIMESEQ         reduce using rule 25 (identifier -> ID .)
    DIVEQ           reduce using rule 25 (identifier -> ID .)
    MODEQ           reduce using rule 25 (identifier -> ID .)
    PLUSEQ          reduce using rule 25 (identifier -> ID .)
    MINUSEQ         reduce using rule 25 (identifier -> ID .)
    RBRACE          reduce using rule 25 (identifier -> ID .)


state 19

    (3) global_declaration_list -> global_declaration_list global_declaration .

    VOID            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    CHAR            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    INT             reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    FLOAT           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    LPAREN          reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    TIMES           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    ID              reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    $end            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)


state 20

    (6) function_definition -> type_specifier declarator . declaration_list_opt compound_statement
    (93) init_declarator -> declarator .
    (94) init_declarator -> declarator . EQUALS initializer
    (12) declaration_list_opt -> . declaration_list
    (13) declaration_list_opt -> . empty
    (14) declaration_list -> . declaration
    (15) declaration_list -> . declaration_list declaration
    (128) empty -> .
    (87) declaration -> . decl_body SEMI
    (88) decl_body -> . type_specifier init_declarator_list_opt
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    COMMA           reduce using rule 93 (init_declarator -> declarator .)
    SEMI            reduce using rule 93 (init_declarator -> declarator .)
    EQUALS          shift and go to state 37
    LBRACE          reduce using rule 128 (empty -> .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    type_specifier                 shift and go to state 29
    declaration_list_opt           shift and go to state 36
    declaration_list               shift and go to state 26
    empty                          shift and go to state 27
    declaration                    shift and go to state 28
    decl_body                      shift and go to state 8

state 21

    (88) decl_body -> type_specifier init_declarator_list_opt .

    SEMI            reduce using rule 88 (decl_body -> type_specifier init_declarator_list_opt .)


state 22

    (89) init_declarator_list_opt -> init_declarator_list .
    (92) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            reduce using rule 89 (init_declarator_list_opt -> init_declarator_list .)
    COMMA           shift and go to state 38


state 23

    (90) init_declarator_list_opt -> empty .

    SEMI            reduce using rule 90 (init_declarator_list_opt -> empty .)


state 24

    (91) init_declarator_list -> init_declarator .

    COMMA           reduce using rule 91 (init_declarator_list -> init_declarator .)
    SEMI            reduce using rule 91 (init_declarator_list -> init_declarator .)


state 25

    (7) function_definition -> declarator declaration_list_opt . compound_statement
    (100) compound_statement -> . LBRACE block_item_list_opt RBRACE

    LBRACE          shift and go to state 40

    compound_statement             shift and go to state 39

state 26

    (12) declaration_list_opt -> declaration_list .
    (15) declaration_list -> declaration_list . declaration
    (87) declaration -> . decl_body SEMI
    (88) decl_body -> . type_specifier init_declarator_list_opt
    (8) type_specifier -> . VOID
    (9) type_specifier -> . CHAR
    (10) type_specifier -> . INT
    (11) type_specifier -> . FLOAT

    LBRACE          reduce using rule 12 (declaration_list_opt -> declaration_list .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    declaration                    shift and go to state 41
    decl_body                      shift and go to state 8
    type_specifier                 shift and go to state 29

state 27

    (13) declaration_list_opt -> empty .

    LBRACE          reduce using rule 13 (declaration_list_opt -> empty .)


state 28

    (14) declaration_list -> declaration .

    VOID            reduce using rule 14 (declaration_list -> declaration .)
    CHAR            reduce using rule 14 (declaration_list -> declaration .)
    INT             reduce using rule 14 (declaration_list -> declaration .)
    FLOAT           reduce using rule 14 (declaration_list -> declaration .)
    LBRACE          reduce using rule 14 (declaration_list -> declaration .)


state 29

    (88) decl_body -> type_specifier . init_declarator_list_opt
    (89) init_declarator_list_opt -> . init_declarator_list
    (90) init_declarator_list_opt -> . empty
    (91) init_declarator_list -> . init_declarator
    (92) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (128) empty -> .
    (93) init_declarator -> . declarator
    (94) init_declarator -> . declarator EQUALS initializer
    (16) declarator -> . direct_declarator
    (17) declarator -> . pointer direct_declarator
    (20) direct_declarator -> . identifier
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (18) pointer -> . TIMES
    (19) pointer -> . TIMES pointer
    (25) identifier -> . ID

    SEMI            reduce using rule 128 (empty -> .)
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    init_declarator_list_opt       shift and go to state 21
    init_declarator_list           shift and go to state 22
    empty                          shift and go to state 23
    init_declarator                shift and go to state 24
    declarator                     shift and go to state 42
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    identifier                     shift and go to state 15

state 30

    (87) declaration -> decl_body SEMI .

    VOID            reduce using rule 87 (declaration -> decl_body SEMI .)
    CHAR            reduce using rule 87 (declaration -> decl_body SEMI .)
    INT             reduce using rule 87 (declaration -> decl_body SEMI .)
    FLOAT           reduce using rule 87 (declaration -> decl_body SEMI .)
    LPAREN          reduce using rule 87 (declaration -> decl_body SEMI .)
    TIMES           reduce using rule 87 (declaration -> decl_body SEMI .)
    ID              reduce using rule 87 (declaration -> decl_body SEMI .)
    $end            reduce using rule 87 (declaration -> decl_body SEMI .)
    LBRACE          reduce using rule 87 (declaration -> decl_body SEMI .)
    IF              reduce using rule 87 (declaration -> decl_body SEMI .)
    WHILE           reduce using rule 87 (declaration -> decl_body SEMI .)
    FOR             reduce using rule 87 (declaration -> decl_body SEMI .)
    BREAK           reduce using rule 87 (declaration -> decl_body SEMI .)
    RETURN          reduce using rule 87 (declaration -> decl_body SEMI .)
    ASSERT          reduce using rule 87 (declaration -> decl_body SEMI .)
    PRINT           reduce using rule 87 (declaration -> decl_body SEMI .)
    READ            reduce using rule 87 (declaration -> decl_body SEMI .)
    PLUSPLUS        reduce using rule 87 (declaration -> decl_body SEMI .)
    MINUSMINUS      reduce using rule 87 (declaration -> decl_body SEMI .)
    AND             reduce using rule 87 (declaration -> decl_body SEMI .)
    PLUS            reduce using rule 87 (declaration -> decl_body SEMI .)
    MINUS           reduce using rule 87 (declaration -> decl_body SEMI .)
    NOT             reduce using rule 87 (declaration -> decl_body SEMI .)
    ADDRESS         reduce using rule 87 (declaration -> decl_body SEMI .)
    INT_CONST       reduce using rule 87 (declaration -> decl_body SEMI .)
    CHAR_CONST      reduce using rule 87 (declaration -> decl_body SEMI .)
    FLOAT_CONST     reduce using rule 87 (declaration -> decl_body SEMI .)
    STRING          reduce using rule 87 (declaration -> decl_body SEMI .)
    SEMI            reduce using rule 87 (declaration -> decl_body SEMI .)
    RBRACE          reduce using rule 87 (declaration -> decl_body SEMI .)


state 31
